# ticket-rs

./: .gitignore  Cargo.toml  ticket.db
migrations/20170620003300_create_users/: up.sql
migrations/20170626231926_create_tickets_table/: up.sql
src/: lib.rs  main.rs  models.rs
src/controllers/: mod.rs  tickets.rs
src/records/: tickets.rs
src/views/: main.qml  main.qmlc
