[package]
name = "ticket"
version = "0.1.0"
authors = ["Kieran Eglin <kieran.eglin@gmail.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.13.0", features = ["sqlite"] }
dotenv = "0.9.0"
chrono = "0.3.1"
qml = { git = "https://github.com/White-Oak/qml-rust", rev = "d731e336fbd1e713" }
